[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/font-data/font-read.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/images/reagents/rune_shard.png" type="Texture" id=2]
[ext_resource path="res://game/blacksmith/ReagentTransmuted.gd" type="Script" id=3]
[ext_resource path="res://assets/images/ui/reagent_list/slot_selection test.png" type="Texture" id=4]
[ext_resource path="res://game/tooltip/TooltipCollision.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 78
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 90, 90 )

[node name="ReagentTransmuted" type="Control"]
margin_right = 150.0
margin_bottom = 180.0
rect_min_size = Vector2( 200, 200 )
mouse_filter = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="."]
margin_right = 150.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 75, 75 )
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Active" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.878431 )
margin_left = -36.9995
margin_top = -38.6812
margin_right = 183.001
margin_bottom = 181.319
texture = ExtResource( 4 )
expand = true

[node name="Upgraded" type="Label" parent="."]
modulate = Color( 0.0470588, 1, 0, 1 )
margin_left = 139.589
margin_top = -35.3176
margin_right = 179.589
margin_bottom = 49.6824
custom_fonts/font = SubResource( 1 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TooltipCollision" parent="." instance=ExtResource( 5 )]
position = Vector2( 75, 70 )

[node name="CollisionShape2D" parent="TooltipCollision" index="0"]
shape = SubResource( 2 )

[node name="TooltipPosition" type="Position2D" parent="."]
position = Vector2( 227.474, -72.6783 )
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="disable_tooltip" from="TooltipCollision" to="." method="_on_TooltipCollision_disable_tooltip"]
[connection signal="enable_tooltip" from="TooltipCollision" to="." method="_on_TooltipCollision_enable_tooltip"]

[editable path="TooltipCollision"]
